--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -22,4 +22,4 @@ jobs:
           cml-publish feature_importance.png --md >> report.md
           cml-publish residuals.png --md >> report.md
           
-          cmd-send-comment report.md
+          cml-send-comment report.md
